# LambdaJS

./: LICENSE  README.md  dune
examples/: argument_changing.js  argument_passing.js  arithmetic.js  arithmetic_dict.js  array.js  array_index.js  condition.js  dict.js  dict_delete.js  high_order.js  simple_cond.js  while.js
lib/: desugar.ml  dune
src/: code.js  desugar.ml  dune  lab.ml  translate.ml
test/: dune  tests.ml
