; To load libraries in a fresh utop top loop use command line
; `dune utop`
; or an equivalent means is to start utop and enter `#use_output "dune top";;`

(library
 (name desugar)
 (modules desugar) 
 (libraries ppx_deriving.runtime flow_parser)
)

; To run this set example main binary (inserting appropriate string and file):
; dune exec ./src/set_main.exe <string> <file>

